--- a/exercicios/indexb.html
+++ b/exercicios/indexb.html
@@ -7,22 +7,16 @@
 </head>
 <body>
     <p>Mudanças de linha:</p>
-    <p>"No mundo dos negocios todos sao pagos com duas
-        <br>
-        moedas:Dinheiro e experiencia
-        <br>
+    <p>"No mundo dos negocios todos sao pagos com duas<br>
+        moedas:Dinheiro e experiencia<br>
         primeiro,o dinheiro virá depois" --Harol Geneen
     </p>
     <p>
-        "Ha homens que lutam um dia e sao bons.
-        <br>
-        Ha outros que lutam muitos dias e sao melhores.
-        <br>
-        Mas ha os quelutam toda a vida, e estes sao 
-        <br>
-        imprescindiveis."
-        <br>
-       <p>--Bertold Brencht</p> 
+        "Ha homens que lutam um dia e sao bons.<br>
+        Ha outros que lutam muitos dias e sao melhores.<br>
+        Mas ha os quelutam toda a vida, e estes sao <br>
+        imprescindiveis."<br>
     </p>
+    <p>--Bertold Brencht</p> 
 </body>
 </html>
