--- a/exercicios-rm87336/indexb.html
+++ b/exercicios-rm87336/indexb.html
@@ -10,11 +10,11 @@
 
         <br>
 
-        <p>Este é o primeiro parágrafo.</p>
+        <p>Este é o primeiro parágrafo. \o/</p>
 
         <hr>
 
-        <p>Este é o segundo parágrafo.</p>
+        <p>Este é o segundo parágrafo. \o/</p>
 
         <br>
 
