--- a/exercicios/index.html
+++ b/exercicios/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html> 
-<html>
+<!DOCTYPE html>
+    <head>
+        <meta charset="UTF-8">      
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
 
-<head>
-    <meta charset="UTF-8">  
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"                 >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
-
-
+    <p>Exemplo de cabeçalhos</p>
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
 </body>
-</html>
