--- a/exercicios/indexb.html
+++ b/exercicios/indexb.html
@@ -13,7 +13,11 @@
         <p>Harold Geneen</p>
         <hr>
         <hr>
-        <P></P>
+        <P>Há homens que lutam um dia e são bons,</P>
+        <p> há outros que lutam um ano e são melhores,</p>
+        <p>Mas há os que lutam toda a vida e estes</p>
+        <p>são imprescindíveis.</p>
+        <p>Bertolt Brecht</p>
     </body>
 
 
