alteraçao de titulo

--- a/indexb.html
+++ b/indexb.html
@@ -13,7 +13,7 @@
         <br>     
         <p>"Ha homens que lutam um dia e são bons.
             Ha outros que lutam muitos dias e são melhores.
-            Mas ha os que lutam toda vida, estes são imprescindiveis."
+            Mas ha os que lutam toda vida, esses são imprescindiveis."
             -- Bertold Brecht
         </p>     
     
