--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF=8">
         <meta name= "viewport" content="width=device-width, inicial-scale=1.0">
-<title>Exercício 1</title> 
+<title>Exercicio 1</title> 
 </head>
 <body>
     <h1>Header 1</h1>
