alterando o texto do arquivo 2

--- a/exercicios-rm87336/indexb.html
+++ b/exercicios-rm87336/indexb.html
@@ -10,15 +10,20 @@
 
         <br>
 
-        <p>Este é o primeiro parágrafo. \o/</p>
+        <p>"No Mundo dos negocios todos sao pagos com duas
+            moedas:Dinnheiro e experiencia. Agarre a experiencia
+            primeiro, o dinheiro vira depois" -- Harold Gennen</p>
 
         <br><br><br><br>
 
-        <p>Este é o segundo parágrafo. \o/</p>
+        <p>"Ha homens que lutao um dia e sao bons.
+            Ha outros que lutam muitos dias e sao melhores.
+            Mas ha os que lutam toda a vida, a estes sao
+            imprescindiveis."</p>
 
         <br>
 
-        <p>Fim</p>
+        <p>Bertold Brencht</p>
 
 
 
