--- a/exercicios-rm87336/indexb.html
+++ b/exercicios-rm87336/indexb.html
@@ -10,15 +10,15 @@
 
         <br>
 
-        <p>"No Mundo dos negocios todos sao pagos com duas
-            moedas:Dinnheiro e experiencia. Agarre a experiencia
+        <p>"No Mundo dos negocios todos sao pagos com duas<br>
+            moedas:Dinnheiro e experiencia. Agarre a experiencia<br>
             primeiro, o dinheiro vira depois" -- Harold Gennen</p>
 
         <br><br><br><br>
 
-        <p>"Ha homens que lutao um dia e sao bons.
-            Ha outros que lutam muitos dias e sao melhores.
-            Mas ha os que lutam toda a vida, a estes sao
+        <p>"Ha homens que lutao um dia e sao bons.<br>
+            Ha outros que lutam muitos dias e sao melhores.<br>
+            Mas ha os que lutam toda a vida, a estes sao<br>
             imprescindiveis."</p>
 
         <br>
